<resources>
    <string name="app_name">Heart Attack Detector</string>
    <string name="name">Name</string>
    <string name="breathing">Breathing Problem</string>
    <string name="age">Above 30 yrs</string>
    <string name="sex">Sex : Men</string>
    <string name="diabetic">Diabetic</string>
    <string name="hint_name">Name</string>
    <string name="unknown">Unkown</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
